cambio de imagen
Se le agregaron nuevos codigos para que se vea en otros dispositivos

--- a/style.css
+++ b/style.css
@@ -252,6 +252,9 @@ td, th{
     nav{
         position: static;
     }
+    .productos li{
+        width: 100%;
+    }
     .caja, .principal, .mapa-contenido, .contenido-diferenciales, .video, .productos{
         width: auto;
     }
